# NivaMotorsSimpleProject

./: CMakeLists.txt  README.md
executable/: CMakeLists.txt
executable/Inc/: main.h
executable/Src/: main.c
utils/: CMakeLists.txt
utils/Inc/: memorySimulator.h  printer.h  valueGenerator.h
utils/Src/: memorySimulator.c  printer.c  valueGenerator.c
